[package]
name = "rot_net"
version = "0.1.0"
authors = ["Corralus-Caninus <ward.joshua92@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name= "psyclones"
path = "src/lib.rs"

[dependencies]
rand = "0.8.3"
# TODO: find a way to graph with debug using plotter (conditional build)
# TODO: serde for topology serialization etc.
# TODO: unittests in tests/ directory
# TODO: benchmarks in benches/ directory
